# esmini

./: .bazelignore  .bazelrc  .black-format  .clang-format  .clang-tidy  .cmake-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  ASAN.supp  BUILD.bazel  BuildOSG.md  BuildOnLinux.md  BuildOnWindows.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  Comprehensive_Readme.md  EnvironmentSimulator.pri  MODULE.bazel  README.md  appveyor.yml  config.yml  create_VisualStudio2017_solution_winSDKv10_win32.bat  create_VisualStudio2017_solution_winSDKv10_win32_for_adapt.bat  create_VisualStudio2017_solution_winSDKv10_win64.bat  create_VisualStudio2017_solution_winSDKv10_win64_without_osg.bat  create_VisualStudio2017_solution_winSDKv7_1.bat  create_VisualStudio2019_solution_winSDKv10_win64.bat  create_ubuntu_gcc_project.sh  create_win_VisualStudio_solution.bat  create_xcode_project.sh  generate_binary_dist.bat  generate_binary_dist.sh  main.py  odr_coverage.txt  osc_coverage.txt  osc_support.txt  (+5 more)
AstaZero/: CMakeLists.txt  main.cpp
EnvironmentSimulator/: CMakeLists.txt  replayer_log.txt
EnvironmentSimulator/CommonMini/: CMakeLists.txt  CommonMini.cpp  CommonMini.hpp  version.cmake  version.hpp
EnvironmentSimulator/Controllers/: Controller.cpp  Controller.hpp  ControllerExternal.cpp  ControllerExternal.hpp  ControllerFollowGhost.cpp  ControllerFollowGhost.hpp  ControllerGhost.cpp  ControllerGhost.hpp  ControllerInteractive.cpp  ControllerInteractive.hpp  ControllerSloppyDriver.cpp  ControllerSloppyDriver.hpp  ControllerSumo.cpp  ControllerSumo.hpp  vehicle.cpp  vehicle.hpp
EnvironmentSimulator/EgoSimulator/: CMakeLists.txt  CMakeLists.txt.bak  main.cpp  vehicle.cpp  vehicle.hpp
EnvironmentSimulator/EnvironmentSimulator/: CMakeLists.txt  main.cpp
EnvironmentSimulator/EnvironmentSimulatorMini/: main.cpp
EnvironmentSimulator/Hello-World_coding-example/: CMakeLists.txt
EnvironmentSimulator/Modules/: BUILD.bazel
EnvironmentSimulator/OdrPlot/: CMakeLists.txt  main.cpp
EnvironmentSimulator/OpenDriveViewer/: CMakeLists.txt  example1.bat  example2.bat  example3.bat  example4.bat  example5.bat  main.cpp  readme.txt  vehicle.cpp  vehicle.hpp
EnvironmentSimulator/PlayerBase/: CMakeLists.txt  playerbase.cpp  playerbase.hpp
EnvironmentSimulator/Replayer/: CMakeLists.txt  Replay.cpp  Replay.hpp  dat2ascii.cpp  main.cpp  osi_receiver.cpp
EnvironmentSimulator/RoadManager/: CMakeLists.txt  RoadManager.cpp  RoadManager.hpp  roadmanager.cpp  roadmanager.hpp
EnvironmentSimulator/RoadManagerDLL/: CMakeLists.txt  OpenDriveUtil.cs  RoadManagerLibraryCS.cs  roadmanagerdll.cpp  roadmanagerdll.hpp
EnvironmentSimulator/ScenarioEngine/: CMakeLists.txt
EnvironmentSimulator/ScenarioEngineDLL/: CMakeLists.txt  ScenarioEngine.cs  scenarioengine.cpp  scenarioenginedll.cpp  scenarioenginedll.hpp
EnvironmentSimulator/ScenarioEngineMiniDLL/: ScenarioEngine.cs  scenarioenginedll.cpp  scenarioenginedll.h
EnvironmentSimulator/ScenarioViewer/: CMakeLists.txt  main.cpp
EnvironmentSimulator/ScenarioViewerMini/: main.cpp
EnvironmentSimulator/Unittest/: BUILD.bazel  Benchmark_test.cpp  CMakeLists.txt  CommonMini_test.cpp  FollowRouteController_test.cpp  FollowRoute_test.cpp  OSCGlobalAction_test.cpp  OperatingSystem_test.cpp  Replayer_test.cpp  RoadManagerDll_test.cpp  RoadManager_test.cpp  ScenarioEngineDll_test.cpp  ScenarioEngine_test.cpp  ScenarioPlayer_test.cpp  TestHelper.cpp  TestHelper.hpp  test_KdTree.cpp  tmp_test.cpp
EnvironmentSimulator/ViewerBase/: CMakeLists.txt  RubberbandManipulator.cpp  RubberbandManipulator.h  RubberbandManipulator.hpp  readme.txt  viewer.cpp  viewer.hpp
EnvironmentSimulator/code-examples/: CMakeLists.txt
EnvironmentSimulator/esminiDriverModelExample/: CMakeLists.txt  ControllerDriverModel.cpp  ControllerDriverModel.hpp  driver-model-example.xosc  main.cpp
EnvironmentSimulator/esminiRMSharedLibrary/: CMakeLists.txt
EnvironmentSimulator/esminiSharedLibrary/: CMakeLists.txt  esminiLib.cpp  esminiLib.hpp  esminiWrapper.cs
EnvironmentSimulator/esminiSimulatorDynamic/: main.cpp
EnvironmentSimulator/esminiSimulatorStatic/: CMakeLists.txt  main.cpp
Hello-World_coding-example/: CMakeLists.txt  README.md  esmini-player.py  main.cpp  tutorial.adoc
IntegratedControllers/ControllerAEB/: CMakeLists.txt  ControllerAEB.cpp  ControllerAEB.h
OSMP_FMU/: CMakeLists.txt  EsminiOsiSource.cpp  EsminiOsiSource.h  ExampleSystemStructure.ssd  README.md  esmini.cpp  esmini.h  modelDescription.in.xml
resources/: BUILD.bazel  model_ids.txt
resources/dockers/: Dockerfile
resources/scenario_construct_examples/: scenario_nurb_curved_road.xodr  scenario_nurb_curved_road.xosc  scenario_nurb_straight_road.xodr  scenario_nurb_straight_road.xosc  scenario_runner_with_acts.xodr  scenario_runner_with_acts.xosc
resources/schema/: OpenDRIVE_1.4H.xsd  OpenDRIVE_1.5.xsd  OpenSCENARIOv1.1.1.xsd  OpenSCENARIOv1.2.xsd  OpenSCENARIOv1.3.xsd  OpenSCENARIOv1.4.xsd
resources/sumo_inputs/: e6mini.net.xml  e6mini.rou.xml  e6mini.sumocfg  fabriksgatan.net.xml  fabriksgatan.rou.xml  fabriksgatan.sumocfg  multi_intersections.net.xml  multi_intersections.rou.xml  multi_intersections.sumocfg  readme.txt  soderleden.net.xml  soderleden.rou.xml  soderleden.sumocfg  straight.net.xml  straight.rou.xml  straight.sumocfg
resources/traffic_signals/: OpenDRIVE_traffic_signals.txt  cn_traffic_signals.txt  germany_traffic_signals.txt  opendrive_traffic_signals.txt  se_traffic_signals.txt
resources/xodr/: Ex_Markings_demo.xodr  Ex_Pedestrian_Crossing.xodr  circle_300m.xodr  crest-curve.xodr  curve_r100.xodr  curves.xodr  curves_elevation.xodr  e6mini-lht.xodr  e6mini.xodr  fabriksgatan.xodr  fabriksgatan_traffic_lights.xodr  full_junction.xodr  jolengatan.xodr  markings_demo.xodr  markings_demo_final.xodr  multi_intersections.xodr  parking_demo.xodr  roadworks_permanent_temporary_layers.xodr  soderleden.xodr  straight_500m.xodr  straight_500m_roadmarks.xodr  straight_500m_signs.xodr  striaghtAndCurves.xodr  test_local_corner_outline_repeat.xodr  tunnel.xodr  (+13 more)
(+1387 files in other folders)
