module(
    name = "esmini",
    repo_name = "esmini",
)

####################################################################################################
# MACROS
####################################################################################################

DUMMY = "dummy"

####################################################################################################
# BAZEL DEPENDENCIES
####################################################################################################

bazel_dep(name = "rules_cc", version = "0.0.13")