module(
    name = "esmini",
    repo_name = "esmini",
)

####################################################################################################
# MACROS
####################################################################################################

DUMMY = "dummy"

####################################################################################################
# BAZEL DEPENDENCIES
####################################################################################################

bazel_dep(name = "rules_cc", version = "0.0.13")
bazel_dep(name = "rules_python", version = "0.37.1")
bazel_dep(name = "aspect_rules_py", version = "0.8.0")

########################################################################################################################
# BAZEL - RULES PYTHON
########################################################################################################################

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "esmini_pypi",
    python_version = "3.10",
    requirements_lock = "//support/bazel:requirements.txt",
)
use_repo(pip, "esmini_pypi")